--- a/_includes/sidebar-search.html
+++ b/_includes/sidebar-search.html
@@ -1,7 +1,10 @@
 
+<p><a href="http://zhouyang.cn"><img src="assets/images/so.jpg"></img></a></p>
+
+
 <h3>Search</h3>
 <div id="site_search">
-    <input type="text" id="search_box" placeholder="Search">
+	<input type="text" id="search_box" placeholder="Search">
     <button class="btn btn-default" id="site_search_do"><span class="octicon octicon-search"></span></button>
 </div>
 
